TOB-5267 Filter og default batcher
